Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10112,7 +10112,7 @@ https://devzone.nordicsemi.com/f/nordic-q-a/254/streaming-data-over-ble-nrf8001-
 
 </pre>
 </div>
-<div created="20200824141517949" modified="20201007070631844" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
+<div created="20200824141517949" modified="20201007070701865" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
 <pre>It is important to know that maximum number of packets per connection event is dependent on the BLE stack/chipsets and is limited to 4 packets per connection event with iOS, and 6 packets per connection event in Android 
 
 BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. 
@@ -10127,9 +10127,9 @@ In general, one can identify three different typologies of HCI communication:
 • host and controller bidirectionally exchanges (TX and RX) HCI ACL data (Asynchronous ConnectionLess).
 
 
-In dual chip solutions host-controller communication is usually implemented across the
+''In dual chip solutions host-controller communication is usually implemented across the
 most widespread serial peripherals, i.e. UART, SPI, SDIO or USB; in this case the overhead
-introduced in the BLE stack is given by peripheral drivers (both HCI host-side and controllerside). This is the so called HCI Transport Layer</pre>
+introduced in the BLE stack is given by peripheral drivers (both HCI host-side and controllerside). This is the so called HCI Transport Layer''</pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
