--- a/index.html
+++ b/index.html
@@ -10112,7 +10112,7 @@ https://devzone.nordicsemi.com/f/nordic-q-a/254/streaming-data-over-ble-nrf8001-
 
 </pre>
 </div>
-<div created="20200824141517949" modified="20201007070701865" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
+<div created="20200824141517949" modified="20201007073010506" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
 <pre>It is important to know that maximum number of packets per connection event is dependent on the BLE stack/chipsets and is limited to 4 packets per connection event with iOS, and 6 packets per connection event in Android 
 
 BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. 
@@ -10129,7 +10129,17 @@ In general, one can identify three different typologies of HCI communication:
 
 ''In dual chip solutions host-controller communication is usually implemented across the
 most widespread serial peripherals, i.e. UART, SPI, SDIO or USB; in this case the overhead
-introduced in the BLE stack is given by peripheral drivers (both HCI host-side and controllerside). This is the so called HCI Transport Layer''</pre>
+introduced in the BLE stack is given by peripheral drivers (both HCI host-side and controllerside). This is the so called HCI Transport Layer''
+
+
+BLE do I need to add checksum to ensure my data is intact?
+
+Every btle packet already contains a checksum. So the data is already protected.
+Of course checksums are not foolproof but you probably don't need to add more.
+In addition to this, encrypted connections also contain a Message Integrity Check (MIC).
+This uses the IETF RFC 3610 algorithm with AES-128 (NIST FIPS-197) to create a 4 byte field for message authentication. 
+If, by chance, a corrupted message passes CRC, the MIC check will likely fail
+and disconnect the link before anything is given to the application.</pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
