--- a/index.html
+++ b/index.html
@@ -10112,7 +10112,7 @@ https://devzone.nordicsemi.com/f/nordic-q-a/254/streaming-data-over-ble-nrf8001-
 
 </pre>
 </div>
-<div created="20200824141517949" modified="20201007073010506" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
+<div created="20200824141517949" modified="20201007073112457" tags="[[bluetooth wiki]]" title="Bluetooth wiki">
 <pre>It is important to know that maximum number of packets per connection event is dependent on the BLE stack/chipsets and is limited to 4 packets per connection event with iOS, and 6 packets per connection event in Android 
 
 BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. 
@@ -10131,9 +10131,10 @@ In general, one can identify three different typologies of HCI communication:
 most widespread serial peripherals, i.e. UART, SPI, SDIO or USB; in this case the overhead
 introduced in the BLE stack is given by peripheral drivers (both HCI host-side and controllerside). This is the so called HCI Transport Layer''
 
-
+//Question
 BLE do I need to add checksum to ensure my data is intact?
 
+//Answer
 Every btle packet already contains a checksum. So the data is already protected.
 Of course checksums are not foolproof but you probably don't need to add more.
 In addition to this, encrypted connections also contain a Message Integrity Check (MIC).
