--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@ Error message and password prompt
 
 <li>Bluetooth wiki</li>
 
+<li>Draft of 'New Tiddler'</li>
+
 <li>Reactance, capacity</li>
 
 <li>t2_encoding.PNG</li>
@@ -9771,7 +9773,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201007065504342" list="[[Bluetooth wiki]] [[BLE Throughput]]" modified="20201007065506713" title="$:/StoryList">
+<div list="[[Draft of 'New Tiddler']]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9787,7 +9789,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20201007063606622&quot;
+            &quot;text&quot;: &quot;20201022082755365&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -10141,6 +10143,43 @@ In addition to this, encrypted connections also contain a Message Integrity Chec
 This uses the IETF RFC 3610 algorithm with AES-128 (NIST FIPS-197) to create a 4 byte field for message authentication. 
 If, by chance, a corrupted message passes CRC, the MIC check will likely fail
 and disconnect the link before anything is given to the application.</pre>
+</div>
+<div created="20201025055700664" draft.of="New Tiddler" draft.title="Vim notes" modified="20201025074300957" tags="" title="Draft of 'New Tiddler'">
+<pre>Search query to find all lines of the following format:
+
+any number of white spaces 0 
+
+/\s*0
+
+Search query to find lines of the following format:
+
+any number of white spaces 0 any number of white spaces 0  any number of white spaces 0  any number of white spaces 0 
+
+i.e line like this :
+
+        0           0           0           0
+is:
+
+/\(\s*0\)\{4}
+
+The {4} applies only on atom, so we need to put preceding expression in parenthesis
+ 
+To find lines that does NOT match the previous format, for example line like this:
+
+      4053     -366844     -442311      -77478
+
+is:
+
+/^\(\(\s*0\)\{4}\)\@!
+
+@! at the end is the negative look-ahead indicator
+The negative look-ahead applies only on atom, so we 
+need to put everything in parenthesis. 
+
+
+
+
+/\(\s*0\)\{4}\n.*\n.*\n.*\n^\(\(\s*0\)\{4}\)\@!</pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
