Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10162,8 +10162,8 @@ f is the ordinary frequency (measured in hertz) (sometimes symbolised with ν).
 
 As the capacitor charges or discharges, a current flows through it which is restricted by the internal impedance of the capacitor. This internal impedance is commonly known as Capacitive Reactance and is given the symbol XC in Ohms.</pre>
 </div>
-<div created="20201025075033196" modified="20201027074452207" title="SEGGER RTT usage notes">
-<pre>To enable RTT for binary data streaming and logging an additional channel should be enabled.
+<div created="20201025075033196" modified="20201027075311307" title="SEGGER RTT usage notes">
+<pre>To enable RTT for binary data streaming and logging, an additional channel should be enabled.
 By default SEGGER RTT enables and configures only channel 0 for text input/output.
 The default channel for binary data is channel 1, and it should be configured as follows:
 
