Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@ Error message and password prompt
 
 <li>Cortex M4 Position Independent Code -fPIC</li>
 
+<li>Draft of 'Cortex M4 Position Independent Code -fPIC'</li>
+
 <li>Reactance, capacity</li>
 
 <li>SEGGER RTT usage notes</li>
@@ -9777,7 +9779,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201208085226655" list="[[Cortex M4 Position Independent Code -fPIC]]" modified="20201208085226655" title="$:/StoryList">
+<div created="20201203063240394" list="[[Draft of 'Cortex M4 Position Independent Code -fPIC']] [[ARMv7-m branching decipher on STM32L4 mcu]]" modified="20201203063240394" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9793,7 +9795,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20201208085223266&quot;
+            &quot;text&quot;: &quot;20201130103032649&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9829,11 +9831,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1280&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;720&quot;
+            &quot;text&quot;: &quot;1080&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -10148,11 +10150,19 @@ This uses the IETF RFC 3610 algorithm with AES-128 (NIST FIPS-197) to create a 4
 If, by chance, a corrupted message passes CRC, the MIC check will likely fail
 and disconnect the link before anything is given to the application.</pre>
 </div>
-<div created="20201208084726663" modified="20201208085229863" tags="" title="Cortex M4 Position Independent Code -fPIC">
+<div created="20201208084726663" modified="20201208084938552" tags="" title="Cortex M4 Position Independent Code -fPIC">
 <pre># Generate position independent code.                                   -fPIC
 # Access bss via the GOT.                                                         -mno-pic-data-is-text-relative
 # GOT is not PC-relative; store GOT location in a register.      -msingle-pic-base
 # Store GOT location in r9.                                                       -mpic-register=r9</pre>
+</div>
+<div created="20201208084726663" draft.of="Cortex M4 Position Independent Code -fPIC" draft.title="Cortex M4 Position Independent Code -fPIC" modified="20201208085106260" tags="" title="Draft of 'Cortex M4 Position Independent Code -fPIC'">
+<pre># Generate position independent code.                                   -fPIC
+# Access bss via the GOT.                                                         -mno-pic-data-is-text-relative
+# GOT is not PC-relative; store GOT location in a register.      -msingle-pic-base
+# Store GOT location in r9.                                                       -mpic-register=r9
+
+</pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
