--- a/index.html
+++ b/index.html
@@ -9777,7 +9777,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201208090039726" list="$:/ControlPanel" modified="20201208090039726" title="$:/StoryList">
+<div created="20201208090039726" list="[[Cortex M4 Position Independent Code -fPIC]]" modified="20201208090132473" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10148,11 +10148,13 @@ This uses the IETF RFC 3610 algorithm with AES-128 (NIST FIPS-197) to create a 4
 If, by chance, a corrupted message passes CRC, the MIC check will likely fail
 and disconnect the link before anything is given to the application.</pre>
 </div>
-<div created="20201208084726663" modified="20201208085229863" tags="" title="Cortex M4 Position Independent Code -fPIC">
+<div created="20201208084726663" modified="20201208090242086" tags="" title="Cortex M4 Position Independent Code -fPIC">
 <pre># Generate position independent code.                                   -fPIC
 # Access bss via the GOT.                                                         -mno-pic-data-is-text-relative
 # GOT is not PC-relative; store GOT location in a register.      -msingle-pic-base
-# Store GOT location in r9.                                                       -mpic-register=r9</pre>
+# Store GOT location in r9.                                                       -mpic-register=r9
+
+In PIC, all branches and jumps are PC-relative rather than absolute.</pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
