--- a/index.html
+++ b/index.html
@@ -10148,13 +10148,15 @@ This uses the IETF RFC 3610 algorithm with AES-128 (NIST FIPS-197) to create a 4
 If, by chance, a corrupted message passes CRC, the MIC check will likely fail
 and disconnect the link before anything is given to the application.</pre>
 </div>
-<div created="20201208084726663" modified="20201208090242086" tags="" title="Cortex M4 Position Independent Code -fPIC">
+<div created="20201208084726663" modified="20201208091152422" tags="" title="Cortex M4 Position Independent Code -fPIC">
 <pre># Generate position independent code.                                   -fPIC
 # Access bss via the GOT.                                                         -mno-pic-data-is-text-relative
 # GOT is not PC-relative; store GOT location in a register.      -msingle-pic-base
 # Store GOT location in r9.                                                       -mpic-register=r9
 
-In PIC, all branches and jumps are PC-relative rather than absolute.</pre>
+In PIC, all branches and jumps are PC-relative rather than absolute.
+All references to the data section are indirected through the Global Offset Table (GOT).
+The problem is for some absolute address, for instance functions pointer or static strings. </pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
