Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9777,7 +9777,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201208090039726" list="[[Cortex M4 Position Independent Code -fPIC]]" modified="20201208090132473" title="$:/StoryList">
+<div created="20201208113619832" list="$:/ControlPanel" modified="20201208113619832" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9793,7 +9793,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20201208090030044&quot;
+            &quot;text&quot;: &quot;20201208113616326&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
