--- a/index.html
+++ b/index.html
@@ -209,8 +209,6 @@ Error message and password prompt
 
 <li>Cortex M4 Position Independent Code -fPIC</li>
 
-<li>Draft of 'BLE Throughput'</li>
-
 <li>Reactance, capacity</li>
 
 <li>SEGGER RTT usage notes</li>
@@ -9781,7 +9779,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210207092240530" list="[[Draft of 'BLE Throughput']]" modified="20210207092240530" title="$:/StoryList">
+<div created="20210207092240530" list="[[BLE Throughput]]" modified="20210207092240530" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10115,12 +10113,16 @@ which is the offset of ''LoopCopyDataInit''
 
 </pre>
 </div>
-<div created="20200824143432737" modified="20200827081832118" tags="" title="BLE Throughput">
+<div created="20200824143432737" modified="20210207093318304" tags="" title="BLE Throughput">
 <pre>https://interrupt.memfault.com/blog/ble-throughput-primer#le-2m-phy-bt-v50
 
 https://devzone.nordicsemi.com/f/nordic-q-a/254/streaming-data-over-ble-nrf8001-high-throughput-bandwidth-solution
 
-</pre>
+Searching for success criteria and the definition of done for my ble design
+I got to following results and conclusions: I found an science publication (Evaluating Bluetooth Low Energy 
+Suitability for Time-Critical Industrial IoT Applications) where calculated theoretical reliable throughput 
+characteristics and definitions, and then I evaluated my design against those parameters. When I will be 
+reaching theoretical boundaries the design will be considered done and successful.   </pre>
 </div>
 <div created="20201229063430515" modified="20210104074725966" tags="" title="BlueNrg vs STM32WB55">
 <pre>BlueNRG software implementation is blocking so when hci_send_req function executed it waits for a new event to arrive 
@@ -10174,17 +10176,6 @@ https://bugs.launchpad.net/gcc-arm-embedded/+bug/1523315
 https://github.com/bogdanm/udynlink
 https://www.embeddedrelated.com/showthread/comp.arch.embedded/200209-1.php
 https://github.com/rgujju/STM32-projects/tree/master/got_plt</pre>
-</div>
-<div created="20200824143432737" draft.of="BLE Throughput" draft.title="BLE Throughput" modified="20210207093051470" tags="" title="Draft of 'BLE Throughput'">
-<pre>https://interrupt.memfault.com/blog/ble-throughput-primer#le-2m-phy-bt-v50
-
-https://devzone.nordicsemi.com/f/nordic-q-a/254/streaming-data-over-ble-nrf8001-high-throughput-bandwidth-solution
-
-Searching for success criteria and the definition of done for my ble design
-I got to following results and conclusions: I found an science publication (Evaluating Bluetooth Low Energy 
-Suitability for Time-Critical Industrial IoT Applications) where calculated theoretical reliable throughput 
-characteristics and definitions, and then I evaluated my design against those parameters. When I will be 
-reaching theoretical boundaries the design will be considered done and successful.   </pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
