--- a/index.html
+++ b/index.html
@@ -10174,7 +10174,7 @@ SCO is for real-time narrow band signal which does not require retransmission. V
 
 https://jimmywongiot.com/2020/07/08/how-to-install-nrf-sniffer-through-nrf52-dk-board/</pre>
 </div>
-<div created="20201208084726663" modified="20210728125240830" tags="" title="Cortex M4 Position Independent Code -fPIC">
+<div created="20201208084726663" modified="20210728125333511" tags="" title="Cortex M4 Position Independent Code -fPIC">
 <pre># Generate position independent code.                                   -fPIC
 # Access bss via the GOT.                                                         -mno-pic-data-is-text-relative
 # GOT is not PC-relative; store GOT location in a register.      -msingle-pic-base
@@ -10206,7 +10206,7 @@ compiler switches enable generation of position independent code.
 As for now I'm stuck in following sitauation. 
 The code is generated position independent and I see that access to global variables done via r9 register, which is the desired behavior. 
 When using -frwpi, as I understand, access to both global initialized data (.data) and global uninitialized data (.bss) will be by the r9 register
-as I see in following asm generated for HAL_IncTick function:
+as I see in following asm generated for `HAL_IncTick function`:
 
 
 ```
@@ -10227,7 +10227,7 @@ __weak void HAL_IncTick(void)
 ```
 
 
-Where uwTick is in bss as it declared like that:
+Where `uwTick` is in bss as it declared like that:
 
 
 ```
@@ -10236,7 +10236,7 @@ __IO uint32_t uwTick;
 
 
 and it does not have initial value. 
-And where uwTickFreq is in .data as it declared like that
+And where `uwTickFreq` is in .data as it declared like that
 
 
 ```
@@ -10244,7 +10244,7 @@ HAL_TickFreqTypeDef uwTickFreq = HAL_TICK_FREQ_DEFAULT;  /* 1KHz */
 ```
 
 
-and initialized with HAL_TICK_FREQ_DEFAULT</pre>
+and initialized with `HAL_TICK_FREQ_DEFAULT`</pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
