--- a/index.html
+++ b/index.html
@@ -10174,7 +10174,7 @@ SCO is for real-time narrow band signal which does not require retransmission. V
 
 https://jimmywongiot.com/2020/07/08/how-to-install-nrf-sniffer-through-nrf52-dk-board/</pre>
 </div>
-<div created="20201208084726663" modified="20210728125333511" tags="" title="Cortex M4 Position Independent Code -fPIC">
+<div created="20201208084726663" modified="20210728130703150" tags="" title="Cortex M4 Position Independent Code -fPIC">
 <pre># Generate position independent code.                                   -fPIC
 # Access bss via the GOT.                                                         -mno-pic-data-is-text-relative
 # GOT is not PC-relative; store GOT location in a register.      -msingle-pic-base
@@ -10244,7 +10244,55 @@ HAL_TickFreqTypeDef uwTickFreq = HAL_TICK_FREQ_DEFAULT;  /* 1KHz */
 ```
 
 
-and initialized with `HAL_TICK_FREQ_DEFAULT`</pre>
+and initialized with `HAL_TICK_FREQ_DEFAULT`
+
+As for now this does not work, as the offsets to .bss data are given relatively to .bss section start
+
+which is 
+
+
+```
+
+Disassembly of section .bss:
+
+20000458 &lt;completed.1&gt;:
+```
+
+So the  #24264 offset which is used in this part 
+
+
+```
+ 800ab3a: 45 f6 c8 62  	movw	r2, #24264
+ 800ab3e: c0 f2 00 02  	movt	r2, #0
+ 800ab42: 8b 58        	ldr	r3, [r1, r2]
+```
+
+so  0d24264 + 0x20000458 gives address of uwTick which is : 0x20006320
+And offsets to variables in .data segment is given relatively to .data section start
+which is  0x20000000  and in this part we see that 32 is used as offset to uwTickFreq
+
+ 800ab2e: 40 f2 20 00  	movw	r0, #32
+ 800ab32: c0 f2 00 00  	movt	r0, #0
+ 800ab36: 49 46        	mov	r1, r9
+ 800ab38: 08 58        	ldr	r0, [r1, r0]
+
+
+```
+Disassembly of section .data:
+
+20000000 &lt;_sdata&gt;:
+20000000: d0 07        	lsls	r0, r2, #31
+20000002: 00 00        	movs	r0, r0
+
+20000020 &lt;uwTickFreq&gt;:
+20000020: 01 00        	movs	r1, r0
+20000022: 00 00        	movs	r0, r0
+```
+
+As r9 used as base in both cases this code won't work!!!!
+Need to find a way to make linker make .bss relocations relatively to .data segment start
+
+</pre>
 </div>
 <div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
